--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "core-js": "^3.6.5",
     "docx-preview": "^0.1.9",
     "element-ui": "^2.15.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "jszip": "^3.7.1",
     "less": "^4.1.2",
     "less-loader": "^5.0.0",
